--- a/public_html/wp-content/plugins/wordcamp-speaker-feedback/assets/scss/style.scss
+++ b/public_html/wp-content/plugins/wordcamp-speaker-feedback/assets/scss/style.scss
@@ -169,6 +169,14 @@
 			width: 140px;
 		}
 	}
+
+	.inappropriate {
+		th {
+			&.check-column {
+				border-left: 4px solid #ffb900;
+			}
+		}
+	}
 }
 
 /**
